--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -3,5 +3,6 @@
 
 {% block content %}
 <h2>Panel / Vista protegida</h2>
-<p>Hola, <strong>{{ user.username }}</strong>. Si estás aquí, es porque estás autenticado ✅</p>
+<p>Hola, <strong>{{ user.username }}</strong>. Si estás aquí, es porque estás autenticado ✅
+Panel interno del e-commerce (Vista protegida)</p>
 {% endblock %}
